# lazywire

./: .gitignore  CMakeLists.txt  README.md  lazyscp.md
include/: app.h  file_ops.h  fuzzy.h  local_fs.h  pane.h  remote_fs.h  ssh_session.h
src/: app.cpp  file_ops.cpp  fuzzy.cpp  local_fs.cpp  main.cpp  remote_fs.cpp  ssh_session.cpp
